--- a/fe/package.json
+++ b/fe/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.3.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "prettier-plugin-organize-imports": "^4.1.0",
