--- a/fd-be/.env.example
+++ b/fd-be/.env.example
@@ -29,3 +29,19 @@ FIREBASE_TOKEN_URI=https://oauth2.googleapis.com/token
 FIREBASE_AUTH_PROVIDER_X509_CERT_URL=https://www.googleapis.com/oauth2/v1/certs
 FIREBASE_CLIENT_X509_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/edutech%40edute-703fe.iam.gserviceaccount.com
 FIREBASE_UNIVERSE_DOMAIN=googleapis.com
+
+
+# Google cloud storage configuration
+GCS_BUCKET_NAME=edutech-2025-test-edu
+GOOGLE_CLOUD_TRANSCODER_REGION=asia-southeast1
+
+# VNPay
+VNPAY_TMN_CODE=97HJL08K
+VNPAY_HASH_SECRET=GR8ZB9R41QU1U59BFQJ8Q7AFIDT2BT8Q
+VNPAY_RETURN_URL=localhost:3000/payment/vnpay/result
+VNPAY_IPN_URL=localhost:3001/api/payment/webhook/vnpay
+VNPAY_VERSION=2.1.0
+VNPAY_LOCALE=vn
+VNPAY_CURRENCY=VND
+VNPAY_BASE_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+VNPAY_API_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
