--- a/fd-be/.env.example
+++ b/fd-be/.env.example
@@ -43,3 +43,6 @@ VNPAY_LOCALE=vn
 VNPAY_CURRENCY=VND
 VNPAY_BASE_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 VNPAY_API_URL=https://sandbox.vnpayment.vn/merchant_webapi/api/transaction
+
+#Map
+MAPBOX_ACCESS_TOKEN=
