--- a/fe/env.local.example
+++ b/fe/env.local.example
@@ -24,3 +24,6 @@ NEXT_PUBLIC_CLIENT_ID=867575481767-a3c9b73uall1f0b56j878kb5spho7b5a.apps.googleu
 NEXT_PUBLIC_CLIENT_SECRET=G
 
 GOOGLE_CLOUD_STORAGE_ORIGIN=http://localhost:3000
+
+#Map
+MAPBOX_ACCESS_TOKEN=
