--- a/fe/package.json
+++ b/fe/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -28,6 +29,7 @@
     "firebase": "^11.3.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
+    "mapbox-gl": "^3.12.0",
     "next": "15.1.7",
     "prettier-plugin-organize-imports": "^4.1.0",
     "react": "^19.0.0",
@@ -42,6 +44,8 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/mapbox__mapbox-gl-geocoder": "^5.0.0",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
