--- a/fd-be/package.json
+++ b/fd-be/package.json
@@ -40,6 +40,7 @@
     "express-session": "^1.18.1",
     "firebase-admin": "^13.1.0",
     "moment": "^2.30.1",
+    "nanoid": "^5.1.5",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
