--- a/fe/package.json
+++ b/fe/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.8",
     "@google-cloud/storage": "^7.16.0",
     "@heroicons/react": "^2.2.0",
     "@mapbox/mapbox-gl-geocoder": "^5.0.3",
@@ -28,6 +29,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^11.3.1",
+    "graphql": "^16.11.0",
+    "graphql-ws": "^6.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "mapbox-gl": "^3.12.0",
