--- a/package.json
+++ b/package.json
@@ -6,12 +6,11 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "nest build",
+    "build": "nest build --webpack",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "node --max-old-space-size=1024 dist/main.js",
-    "start:dev": "nest start --watch --max-old-space-size=1024",
-    "start:debug": "nest start --debug --watch --max-old-space-size=1024",
-    "start:prod": "node dist/main",
+    "start": "node --max-old-space-size=384 --optimize-for-size dist/main.js",
+    "start:dev": "nest start --watch --max-old-space-size=384",
+    "start:prod": "node --max-old-space-size=384 --optimize-for-size dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
