--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pg": "^8.13.3",
+    "pg-boss": "^10.3.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
