--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "class-validator": "^0.14.1",
     "connect-typeorm": "^2.0.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "express-session": "^1.18.1",
     "firebase-admin": "^13.1.0",
     "graphql": "^16.11.0",
